--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ deploy:
     skip-cleanup: true
     github-token: $GITHUB_TOKEN # Set in travis-ci.org dashboard, marked secure
     keep-history: true
-    local-dir: dist
+    local-dir: build
