--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.6",
     "react-chat-ui": "^0.3.2",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-yandex-metrika": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
