--- a/vue/package.json
+++ b/vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/yandex-metrika": "^1.0.3",
     "axios": "^0.19.0",
     "emoji-mart-vue-fast": "^6.1.1",
     "form-data": "^2.5.1",
