--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "emoji-mart-vue-fast": "^6.1.1",
     "form-data": "^2.5.1",
+    "honeybadger-js": "^2.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nuxt": "^2.10.2",
