--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ install:
 - npm i
 script:
 - npm run build
+- cd vue
+- npm run build:gh-pages
 deploy:
     provider: pages
     skip-cleanup: true
     github-token: $GITHUB_TOKEN # Set in travis-ci.org dashboard, marked secure
     keep-history: true
-    local-dir: build
+    local-dir: vue/dist
+
